fixed mobile content overlap

--- a/client/public/main.css
+++ b/client/public/main.css
@@ -14,6 +14,10 @@ a.bg-light:focus, a.bg-light:hover, button.bg-light:focus, button.bg-light:hover
     min-height: 42px;
 }
 
+.fix-info {
+    margin-left: 5px;
+}
+
 .logo {
     transform: scale(.23);
     border-radius: 50%;
